--- a/index.htm
+++ b/index.htm
@@ -2,26 +2,74 @@
 <html>
 
 <head>
-    <title> Page Title </title>
+    <title> Calem's Portfolio </title>
 </head>
 
+<header>
+    <center>
+        <h1> Welcome to my Portfolio</h1>
+    </center>
+    <nav>
+        <center>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </center>
+    </nav>
+</header>
+
 <body>
+    <section>
+        <h2>Text Effects</h2>
+    
+        <p>This is a <b>bolded statement.</b> 
+            This is also a <strong>bolded statement.</strong>
+            <!--This is how I italicize something-->
+            This is an <i>italicized statement.</i>
+            This is also <em>italicized statement.</em>
+            <!--This is how I underline something-->
+            This is an <u>underlined statement.</u>
+            This is a <s>strike through statement.</s>
+            This is <sup>superscript.</sup>
+            This is <sub>subscript.</sub>
+        </p>
+    </section>
 
-    <h1> Heading 1 </h1>
-    <p> My First Paragraph </p>
-    <h2> Heading 2 </h2>
-    <p> My Second Paragraph </p>
-    <h3> Heading 3 </h3>
-    <p> My Third Paragraph </p>
-    <h4> Heading 4 </h4>
-    <h5> Heading 5 </h5>
-    <h6> Heading 6 </h6>
+    <section>
+        <h2>Basic Lists</h2>
 
-    <p>
-        You could write a whole paragraph about
-        how you wanted to do a project in here.
+        <h3>Ordered List</h3>
+        <ol>
+            <li>First item</li>
+            <li>Second item</li>
+            <li>Third item</li>
+        </ol>
 
-    </p>
+        <h3>Unordered List</h3>
+        <ul>
+            <li>First item</li>
+            <li>Second item</li>
+            <li>Third item</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Basic Table</h2>
+        <table border="1" align="center">
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+            </tr>
+            <tr>
+                <td>Calem</td>
+                <td>25</td>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
+        </table>
+    </section>
+    
+
 
     <a href="https://melacsirrah.itch.io/"> View My Itch.io Page! </a>
     <img src="profile.jpg" width="200" height="100">
